app/styles/main.scss
/* ... */
a {
  text-decoration: none;
  color: $link;
  
  &:hover {
    text-decoration: none;
    color: $hover-link;
  }
}

.main-col {
  display: inline-block;
  width: 67%;
}

.side-col {
  display: inline-block;
  float: right;
  margin: 10px auto;
  //padding: 0 5px;
  width: 31%;
}

.emphasize {
  color: $logo-red;
}

// Overide span margin left 20px;
[class*="span"] {
  margin: 0 !important;
}

.b4cm-icon {
  height: 60px;
  width: 60px;
}


.google-map {

  margin: 0 auto;
  img {
    // Need so icons show
    max-width: none;
  }
}

// Food, Social, Study Icons
.type-icon {
  background: black;
  display: inline-block;
  height: 60px;
  width: 60px;
}

.ad-book {
  @include ad-element;
  height: 110px;
  padding: 5px;
  margin-left: 85px;
  text-align: center;
  width: 220px;

  .ad-label {
    float: right;
    margin-top: 0
  }

  .description {
    display: inline-block;
    float: left;
    line-height: 15px;
    margin: 10px 0 0 15px;
    width: 80px;
  }

  img {
    display: inline-block;
    width: 70px;
  }
}

.rating {

  .stars {
    display: inline-block;
  }

  .review-count {
    display: inline-block;
    margin: 0 0 0 5px;
  }
}

.find-spot {
  margin: 0;

  h3 {
    display: inline;
  }

  select {
    //margin: -10px 0 0 10px;
    width: 80px;
  }

  input {
    width: 280px;
  }

  input, select {
    //background-color: $acc-light;
    //border: 1px solid $logo-red;
    color: $blue-grey;
    margin: -10px 0 0 10px;
    text-align: center;
    //width: 150px;
  }
}

textarea:focus,
input[type='text']:focus {
  border-color: $comp1-dark;
}

.none {
  color: $text-dark;
}

.none-square {
  background-color: #fff;
  box-shadow: 1px 1px 5px 1px #CCCCCC inset;
}

.empty {
  color: $cf-empty;
}

.empty-square {
  background-color: $cf-empty;
}

.few {
  color: $cf-few;
}

.few-square {
  background-color: $cf-few;
}

.average {
  color: $cf-average;
  //color: $text-dark;
}

.average-square {
  background-color: $cf-average;

}

.crowded {
  color: $cf-crowded;
}

.crowded-square {
  background-color: $cf-crowded;
}

.packed {
  color: $cf-packed;
}

.packed-square {
  background-color: $cf-packed;

}

.closed {
  closed: $cf-closed;
}

.closed-square {
  background-color: $cf-closed;
}

.empty-square, .few-square, .average-square,
.crowded-square, .packed-square, .closed-square, .none-square {
  border-left: 1px solid #ccc;
  border-right: 1px solid #ccc;
  border-bottom: 2px solid #ccc;
}

// FORMS
.invalid {
  border: 1px solid red !important;
  color: red !important;
}

.container {
  width: $page-width;
}

// Responsive
@media screen and (max-width: $break-small){
  .container {
    width: 100% !important;
  }
}

/******************
*** NAVBAR
*******************/
.navbar {
  //background-color: $acc-dark;
  text-align: center;

  .navbar-inner,
  .navbar-inverse {
    @include page-container;
    //background-color: $acc-dark !important;
    //background-image: linear-gradient(to bottom, $acc-dark, #7e7e7e) !important;
    background-color: #ffffff;
    background-image: linear-gradient(to bottom, #ffffff, #f9f9f9);
    background-image: -webkit-linear-gradient(top, #ffffff, #f9f9f9);
    background-image: -o-linear-gradient(top, #ffffff, #f9f9f9);
    background-repeat: repeat-x;
    border-bottom: 1px solid $hr-color;
    color: $text-dark;
    padding: 0;
    min-height: 78px;
  
    .logo-icon {
      padding-right: 10px;
      margin-top: 3px;
    }
  
    .logo-text {
  
    }
  
    .brand {
     margin: 0 auto -20px auto;
     padding: 10px 0;
     width: 100%
    }
  
    .login > ul{
      margin: -15px 0 -5px 0;
    }
  
    .nav > li > a {
      //color: $text-dark;
      color: $blue-grey;
    }
  
    .nav > li > a:hover {
      color: $cf-few;
    }
  
    .or {
      margin-top: 9px;
    }
  
    form {
      margin: 25px 0 -44px 0;
      //width: 70%;
  
      .btn {
        margin-top: -10px;
      }
    }
  
    .signout:hover {
      cursor: pointer;
    }
  
    .search-icon {
      display: none;
      height: 25px;
      width: 25px;
      margin: -5px 0 0 5px;
      &:hover {
        cursor: pointer;
      }
    }
  }
}

@media screen and (max-width: $break-small){
  .navbar {
  .navbar-inner,
  .navbar-inverse {
    //position: fixed;
    width: 100%;
    height: 60px;
    text-align: center;

    .login {
      display: none;
    }

    form {
      width: 100%
    }

    .brand {
      width: 100%;
      margin-left: -16px;
      margin-bottom: 10px;
      margin-right: 0;
      padding-right: 0;
    }

    .logo-text {
      //display: none;
    }

    .find-spot {
      input {
        width: 130px;
        margin-left: 2px;
      }
      select {
        width: 75px;
        margin-left: 0px;
      }
    }

    .search-icon {
      display: inline-block;
    }

    .search-btn {
      display: none;
    }
  }
  }
}

/******************
*** HEADER
*******************/

// TEMP - try new style
.header {
  @include page-container;
  @include page-element(10px, 0, center, top);
  height: 40px;

  form {
    margin-bottom: -40px;
    padding-top: 20px;
    padding-bottom: 10px;
    background-color: $page-color;

    .btn {
      margin-top: -10px;
    }
  }

  .signout:hover {
    cursor: pointer;
  }

  .search-icon {
    display: none;
    height: 25px;
    width: 25px;
    margin: -5px 0 0 5px;
    &:hover {
      cursor: pointer;
    }
  }

  .addthis_toolbox {
    float: right;
    padding-top: -2px;
    vertical-align: top;
    width: 210px;
  }
}

@media screen and (max-width: $break-small){
  .header {
    width: 100%
  }

  .addthis_toolbox {
    display: none;
  }

  form {
    width: 100%
  }

  .find-spot {
    input {
      width: 130px;
      margin-left: 2px;
    }
    select {
      width: 75px;
      margin-left: 0px;
    }
  }

  .search-icon {
    display: inline-block;
  }

  .search-btn {
    display: none;
  }
}
/* ... */

